--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.29 2005/02/16 06:52:13 kattemat Exp $
+$Id: CHANGELOG,v 1.30 2005/02/16 14:44:43 tlopatic Exp $
 
 0.4.9 ---------------------------------------------------------------------
 
@@ -99,6 +99,8 @@ BUGFIXES
   This caused olsrd not to work with global IPv6 addresses.
 - A bug in the IPv6 prefix-from IPaddr function has been fixed. This
   bug caused HNA prefixes to always be calculated to 0.
+- If a 2-hop neighbor is also a 1-hop neighbor, a bug made olsrd
+  prefer a bad direct link to a better link via an MPR.
 
 
 0.4.8 ---------------------------------------------------------------------
