--- a/lib/secure/CHANGELOG
+++ b/lib/secure/CHANGELOG
@@ -1,5 +1,10 @@
 This changelog states changes from version 0.2
 
+0.4 - Plugin now compiles under FreeBSD and win32.
+      To compile under win32(cygwin) you have to
+      make sure the openssl include directory
+      is present under /usr/include/mingw/
+      The plugin is not tested under win32.   
 0.3 - Only some minor fixes to make the plugin work
       with olsrd 0.4.6.
       Dynamic interface removal/addition supported.
