--- a/lib/secure/CHANGELOG
+++ b/lib/secure/CHANGELOG
@@ -1,5 +1,10 @@
 This changelog states changes from version 0.2
 
+0.5 - A local MD5 implementation can now be compiled
+      into the plugin so that no external library
+      is needed. Should be great for embedded systems.
+      MD5 might not be super-secure, but hey... it
+      still takes quite some effort to break ;)
 0.4 - Plugin now compiles under FreeBSD and win32.
       To compile under win32(cygwin) you have to
       make sure the openssl include directory
