--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,25 +1,25 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.39 2005/03/17 17:31:17 kattemat Exp $
+$Id: CHANGELOG,v 1.40 2005/03/31 22:27:51 spoggle Exp $
 
 0.4.9 ---------------------------------------------------------------------
 
 OPTIMIZATIONS
 
 The MID database is now also indexed by alias addresses. this makes
-lookups of main addresses based on alias addresses _much_ faster.
+look-ups of main addresses based on alias addresses _much_ faster.
 The mid_lookup_main_addr function alone has gone from >30% of the
 total CPU time used by olsrd to <1%.
 PLUGIN DEVELOPERS: datatypes for MID entries has been changed.
 
 Routing table calculation in the LQ case now uses balanced binary
-trees instead of linked lists, which makes lookups much faster.
+trees instead of linked lists, which makes look-ups much faster.
 
 The debug output function olsr_printf() is not used by olsrd
 internals any more. Instead the macro OLSR_PRINTF is to be used.
 This macro does debug level testing _before_ doing any function
 calls(both printf itself and parameters to printf). This is a much 
-more optimized way of doing debug output. In addittion olsrd can
-be buildt without any debug output code if doing 'make NODEBUG=1'.
+more optimized way of doing debug output. In addition olsrd can
+be built without any debug output code if doing 'make NODEBUG=1'.
 
 TIMEOUT OF DATASETS
 
@@ -106,9 +106,16 @@ PLUGINS
 
 The httpinfo, dyn_gw and dot_draw plugins now all include olsrd
 headerfiles directly. A plugin should define OLSR_PLUGIN before
-includeing olsrd headers. Doing things this way removed the 
+including olsrd headers. Doing things this way removed the 
 redundant datatype definitions that has so often caused trouble
 when things has been updated in olsrd.
+
+EXPERIMENTAL MULTI-INTERFACE CODE FOR FREEBSD
+
+Experimental code using libnet can be compiled in allowing multiple
+interfaces to be used in FreeBSD.  You enable this by compiling using
+OS=fbsd-ll.  You must have libnet-devel installed for this to work
+(/usr/ports/net/libnet-devel).
 
 OTHER UPDATES
 
@@ -123,12 +130,12 @@ BUGFIXES
 
 - Link sensing now works according to announced vtime from
   neighbors. Previously links going symmetric->asymmetric
-  were not nessecarly detected until the holding time expired.
-- A bug in route addittion/removal that could lead to routes
-  using GWs beeing added before the actual route to the GW
-  was set up has been fixed.
+  were not necessarily detected until the holding time expired.
+- A bug in route addition/removal that could lead to routes
+  using GWs being added before the actual route to the GW
+  was set up, has been fixed.
 - A bug in the interface selection in route calculation has been
-  fixed. New routes are no longer added prior to deleting old ones
+  fixed. New routes are no longer added prior to deleting old ones,
   since this caused trouble.
 - A bug in the IPv6 multicast address configuration has been fixed.
   This caused olsrd not to work with global IPv6 addresses.
@@ -148,7 +155,7 @@ LICENSE CHANGE
 Olsrd is now distributed under a BSD style license. We believe olsrd will
 be better off using this license as it opens up for commercial players
 to use olsrd freely in their products. In the end this will lead to
-this kind of users doing serious testing and bugfixing of olsrd. 
+this kind of users doing serious testing and bug fixing of olsrd. 
 
 ETX-LIKE LINK QUALITY DETECTION
 
