--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,14 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.42 2005/04/11 09:09:23 kattemat Exp $
+$Id: CHANGELOG,v 1.43 2005/04/11 18:43:22 kattemat Exp $
 
 0.4.10 --------------------------------------------------------------------
+
+IP ADDRESS VALIDATION
+
+Olsrd now maintains a set of IP addresses that is considered
+invalid. Checks against this set is done on all received
+OLSR packets announced originator addresses. The dataset can
+be updated dynamically.
 
 PLUGIN INTERFACE
 
