--- a/README
+++ b/README
@@ -220,6 +220,7 @@ PLUGINS
 dot_draw	+/+	+/?	+/+	+/+	+/+	?
 dyn_gw		+/+	+/?	+/?	+/?	+/?	?
 httpinfo	+/+	+/+	+/+	+/?	+/?	?
+mini		+/+	?	+/+	?	?	?
 nameservice	+/+	+/?	+/?	+/?	+/?	?
 powerinfo	+/+	+/+	+/+	+/?	+/?	?
 secure		+/+	+/+	+/+	+/?	+/?	?
@@ -453,4 +454,4 @@ to use "osx" instead of "fbsd", as in
   gmake OS=osx
 
 
-$Id: README,v 1.10 2005/05/25 18:23:05 kattemat Exp $
+$Id: README,v 1.11 2005/05/26 16:11:15 br1 Exp $
