--- a/README
+++ b/README
@@ -215,12 +215,13 @@ To use the plugins add them to the olsrd configuration file.
 COMPONENT/OS	Linux	Win32	FreeBSD	NetBSD	OpenBSD	OSX
 ------------------------------------------------------------
 olsrd		+/+	+/+	+/+	+/+	+/+	?
+olsr_switch	+/+	+/?	?	?	?	?
 ------------------------------------------------------------
 PLUGINS
 dot_draw	+/+	+/?	+/+	+/+	+/+	?
 dyn_gw		+/+	+/?	+/?	+/?	+/?	?
 httpinfo	+/+	+/+	+/+	+/?	+/?	?
-mini		+/+	?	+/+	?	?	?
+mini		+/+	+/?	+/+	?	?	?
 nameservice	+/+	+/?	+/?	+/?	+/?	?
 powerinfo	+/+	+/+	+/+	+/?	+/?	?
 secure		+/+	+/+	+/+	+/?	+/?	?
@@ -454,4 +455,4 @@ to use "osx" instead of "fbsd", as in
   gmake OS=osx
 
 
-$Id: README,v 1.11 2005/05/26 16:11:15 br1 Exp $
+$Id: README,v 1.12 2005/06/02 14:41:58 br1 Exp $
